# PyLivestream

./: .appveyor.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .mypy.ini  .travis.yml  CITATION  File-Streaming.md  FileGlob.py  FileGlob2YouTubeLive.py  FileGlobLivestream.py  FileLoop.py  FileLoop2YouTubeLive.py  FileLoopLivestream.py  Glob.py  LICENSE  LICENSE.txt  Loop.py  MANIFEST.in  Microphone.py  MicrophoneLivestream.py  README.md  README.rst  SECURITY.md  ScreenCapture2disk.py  ScreenCapture4YouTube.py  Screenshare.py  Screenshare2FacebookLive.py  Screenshare2Periscope.py  Screenshare2YouTubeLive.py  ScreenshareLivestream.py  Troubleshooting.md  Webcam.py  Webcam2YouTubeLive.py  WebcamLivestream.py  YouTube-screenshare-audio.py  YouTubeLive-screenshare.py  audio-stream.sh  mypy.ini  (+11 more)
.github/: CODE_OF_CONDUCT.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql-analysis.yml
Examples/: local.m3u8  playlist_m3u8.py  screen_share.py
PyLivestream/: __init__.py  ffmpeg.py  io.py  sio.py  stream.py  utils.py
archive/: .appveyor.yml  .travis.yml  azure-pipelines.yml  visual_tests.py
doc/: logo.odp
pylivestream/: __init__.py  ffmpeg.py  listener.py  pylivestream.ini  stream.py  utils.py
reference/: audio-stream.sh  webcam2youtubelive.sh
src/pylivestream/: __init__.py  __main__.py  api.py  base.py  camera.py  ffmpeg.py  glob.py  loopfile.py  microphone.py  pylivestream.ini  screen.py  screen2disk.py  stream.py  utils.py
src/pylivestream/data/: bunny.avi  pylivestream.json
src/pylivestream/tests/: conftest.py  test_class.py  test_disk.py  test_filein.py  test_microphone.py  test_screen.py  test_webcam.py
tests/: Test.py  conftest.py  no_audio.ini  star_collapse_out.avi  test.ini  test.py  test_all.py  test_class.py  test_disk.py  test_filein.py  test_microphone.py  test_screen.py  test_webcam.py
tests/archive/: conftest.py  test.ini
youtubelive/: __init__.py
youtubelive_ffmpeg/: __init__.py
