[metadata]
name = pylivestream
version = 1.9.3.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Easy streaming using FFmpeg to YouTube Live, Periscope, Facebook Live, Twitch, and many more
url = https://github.com/scivision/pylivestream
keywords =
  youtube
  ffmpeg
  twitch
  periscope
  facebook live
  restream.io
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Multimedia :: Graphics :: Capture :: Screen Capture
  Topic :: Multimedia :: Sound/Audio :: Capture/Recording
  Topic :: Multimedia :: Video :: Capture
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 40.6.0
  pip >= 10
packages = find:
scripts =
  Glob.py
  Screenshare.py
  Loop.py
  ScreenCapture2disk.py
  Webcam.py
  Microphone.py
  visual_tests.py
install_requires =


[options.data_files]
share/pylivestream =
  pylivestream/pylivestream.ini
  pylivestream/data/logo.png

[options.extras_require]
tests =
  pytest
  pytest-timeout
cov =
  pytest-cov
  coveralls
  flake8
  mypy
captions =
  tinytag

[options.entry_points]
console_scripts =
  FileGlobLivestream = Glob:main
  ScreenshareLivestream = Screenshare:main
  FileLoopLivestream = Loop:main
  ScreenCapture2disk = ScreenCapture2disk:main
  WebcamLivestream = Webcam:main
  MicrophoneLivestream = Microphone:main
  visualTestStream = visual_tests:main
