[metadata]
name = pylivestream
version = 1.11.4
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Livestream using FFmpeg to YouTube Live, Periscope, Facebook Live, Twitch, and many more
url = https://github.com/scivision/pylivestream
keywords =
  youtube
  ffmpeg
  twitch
  periscope
  facebook live
  restream.io
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Multimedia :: Graphics :: Capture :: Screen Capture
  Topic :: Multimedia :: Sound/Audio :: Capture/Recording
  Topic :: Multimedia :: Video :: Capture
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
include_package_data = True
zip_safe = False
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
  pytest-timeout
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy >= 0.800
captions =
  tinytag

[options.entry_points]
console_scripts =
  FileGlobLivestream = pylivestream.__main__:glob_run
  ScreenshareLivestream = pylivestream.__main__:screenshare
  FileLoopLivestream = pylivestream.__main__:loop_file
  ScreenCapture2disk = pylivestream.__main__:screencapture
  WebcamLivestream = pylivestream.__main__:webcam
  MicrophoneLivestream = pylivestream.__main__:microphone
