[options.entry_points]
console_scripts =
  FileGlobLivestream = pylivestream.__main__:glob_run
  ScreenshareLivestream = pylivestream.__main__:screenshare
  FileLoopLivestream = pylivestream.__main__:loop_file
  ScreenCapture2disk = pylivestream.__main__:screencapture
  WebcamLivestream = pylivestream.__main__:webcam
  MicrophoneLivestream = pylivestream.__main__:microphone
